# dependency-parser

./: .gitignore  LICENSE  README.md  args_parser.py  engine.py  set.py  units.py
c++/: CMakeLists.txt  assessment.cpp  assessment.h  engine.h  main.cpp  model.cpp  model.h  options.h  set.h  units.h
c++/parsers/: parser.h  set_parser.cpp  set_parser.h
c++/parsers/arcstandard/: arcstandard.h  model.cpp  model.h  oracle.h
c++/parsers/chu_liu_edmonds/: chu_liu_edmonds.h  feat.h  matrix.h  model.h  perceptron.cpp  perceptron.h
c++/time/: table.h  time.h
datasets/english/train/: wsj_train.first-1k.conll06
python/: assessment.py  engine.py  set.py  stopwatch.py  units.py
python/models/: model.py  oracle.py  random.py
python/parsers/: arcstandard.py  dep_parser.py
